[package]
name = "ch58x"
version = "0.1.0"
edition = "2021"

[dependencies]
critical-section = { version = "1.2", features = ["restore-state-bool"] }
riscv = "0.15"
riscv-rt = { version = "0.16", features = [
    "device",
    "memory",
    "single-hart",
    "no-xie-xip",
    "no-interrupts",
] }
vcell = "0.1"

embedded-hal = "1.0"

embassy-executor = "0.8"
embassy-sync = "0.7"
embassy-time-driver = "0.2"
embassy-time-queue-utils = "0.2"
embassy-usb-driver = "0.2"

[patch.crates-io]
riscv = { git = "https://github.com/fluffi-es/riscv.git" }
riscv-rt = { git = "https://github.com/fluffi-es/riscv.git" }
